--- a/src/WebJobsDemo/appsettings.Development.json
+++ b/src/WebJobsDemo/appsettings.Development.json
@@ -3,14 +3,14 @@
 
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
 
   "WJbSettings": {
+    "LogLevel": "Debug",
     "NThreads": 2
   }
-
 }
