--- a/src/WebJobsDemo/appsettings.json
+++ b/src/WebJobsDemo/appsettings.json
@@ -8,12 +8,13 @@
   },
   
   "AllowedHosts": "*",
-  
+
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobs;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
+    "LogLevel": "Information",
     "NThreads": 4
   }
 }
