--- a/src/WebJobsDemo/WebJobsDemo.csproj
+++ b/src/WebJobsDemo/WebJobsDemo.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>12dd54be-cd4e-4f6a-9c0b-459b55357aa2</UserSecretsId>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UkrGuru.WebJobs\UkrGuru.WebJobs.csproj" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
