--- a/src/WebJobsApi/appsettings.Development.json
+++ b/src/WebJobsApi/appsettings.Development.json
@@ -6,15 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  
-  "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsTest2;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
-    "LogLevel": "Information",
-    "NThreads": 4
+    "LogLevel": "Debug",
+    "NThreads": 2
   }
 }
