--- a/src/WebJobsDemo/appsettings.Development.json
+++ b/src/WebJobsDemo/appsettings.Development.json
@@ -9,8 +9,12 @@
     }
   },
 
+  "ConnectionStrings": {
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo;Integrated Security=SSPI"
+  },
+
   "WJbSettings": {
     "LogLevel": "Debug",
-    "NThreads": 2
+    "NThreads": 1
   }
 }
