--- a/src/WebJobsApi/appsettings.Development.json
+++ b/src/WebJobsApi/appsettings.Development.json
@@ -8,11 +8,11 @@
   },
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi1;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
     "LogLevel": "Debug",
-    "NThreads": 2
+    "NThreads": 1
   }
 }
