--- a/src/WebJobsDemo/appsettings.Development.json
+++ b/src/WebJobsDemo/appsettings.Development.json
@@ -10,7 +10,7 @@
   },
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsTTT;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
