--- a/src/WebJobsApi/WebJobsApi.csproj
+++ b/src/WebJobsApi/WebJobsApi.csproj
@@ -9,7 +9,7 @@
     <Description>UkrGuru.WebJobs with API methods for remote adminitration WebJobs, Rules and Actions.</Description>
     <AssemblyName>UkrGuru.WebJobs.Api</AssemblyName>
     <UserSecretsId>eb5b106a-f34a-41db-a3cb-143179f51c9b</UserSecretsId>
-    <Version>1.2.1</Version>
+    <Version>1.2.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -18,8 +18,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\1.2.0.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\1.2.0.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-    <PackageReference Include="UkrGuru.WebJobs" Version="1.1.3" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="1.2.2" />
   </ItemGroup>
 
 </Project>
