--- a/src/WebJobsApi/appsettings.Development.json
+++ b/src/WebJobsApi/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi1;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
