--- a/src/UkrGuru.WebJobs/UkrGuru.WebJobs.csproj
+++ b/src/UkrGuru.WebJobs/UkrGuru.WebJobs.csproj
@@ -10,12 +10,12 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageIcon>ukrguru-logo.jpg</PackageIcon>
     <RepositoryUrl>https://github.com/UkrGuru/WebJobs</RepositoryUrl>
-    <Description>Starter library for running background tasks under your ASP.NET Core website. Supports cron and trigger Rules. Allows extensibility for any custom Action.</Description>
+    <Description>A starter library for performing background Jobs on your ASP.NET Core website. Supports cron and trigger Rules. Provides extensibility for any custom Action.</Description>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
-    <Version>1.2.2</Version>
+    <Version>1.2.3</Version>
     <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures</PackageTags>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageReleaseNotes>"Convert to tuple" was the wrong idea. Rollback.</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -28,13 +28,13 @@
     <EmbeddedResource Include="Resources\1.2.0.3.Funcs.sql" />
     <EmbeddedResource Include="Resources\1.2.0.2.Data.sql" />
     <EmbeddedResource Include="Resources\1.2.0.1.Tables.sql" />
-    <EmbeddedResource Include="Resources\1.2.2.sql" />
+    <EmbeddedResource Include="Resources\1.2.3.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="UkrGuru.SqlJson" Version="2.1.5" />
+    <PackageReference Include="UkrGuru.SqlJson" Version="2.1.7" />
   </ItemGroup>
 
   <ItemGroup>
