--- a/src/WebJobsService/appsettings.json
+++ b/src/WebJobsService/appsettings.json
@@ -8,11 +8,11 @@
   },
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsService;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
-    "LogLevel": "Debug",
-    "NThreads": 1
+    "LogLevel": "Information",
+    "NThreads": 4
   }
 }
