--- a/src/WebJobsDemo/appsettings.json
+++ b/src/WebJobsDemo/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo1;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
