--- a/demos/WebJobsApi/appsettings.json
+++ b/demos/WebJobsApi/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=localhost;Database=WebJobsApi2;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
