--- a/demos/WebJobsApi/WebJobsApi.csproj
+++ b/demos/WebJobsApi/WebJobsApi.csproj
@@ -5,11 +5,11 @@
     <Authors>Oleksandr Viktor (UkrGuru)</Authors>
     <Copyright>Oleksandr Viktor (UkrGuru)</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Company>PE VIKTOR Oleksandr Oleksandrovych</Company>
+    <Company>Oleksandr Viktor (UkrGuru)</Company>
     <Description>UkrGuru.WebJobs with API methods for remote adminitration WebJobs, Rules and Actions.</Description>
     <AssemblyName>UkrGuru.WebJobs.Api</AssemblyName>
     <UserSecretsId>eb5b106a-f34a-41db-a3cb-143179f51c9b</UserSecretsId>
-    <Version>1.2.2</Version>
+    <Version>1.3.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -19,15 +19,17 @@
 
   <ItemGroup>
     <None Remove="Resources\1.2.0.sql" />
+    <None Remove="Resources\1.3.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\1.3.0.sql" />
     <EmbeddedResource Include="Resources\1.2.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-    <PackageReference Include="UkrGuru.WebJobs" Version="1.2.9" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
