--- a/src/WebJobs.Actions/WebJobs.Actions.csproj
+++ b/src/WebJobs.Actions/WebJobs.Actions.csproj
@@ -16,7 +16,8 @@
     <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures</PackageTags>
     <Description>Part of UkrGuru.WebJobs package extracted for Custom Actions future.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.8</Version>
+    <Version>1.3.0</Version>
+    <PackageReleaseNotes>Upgrade to UkrGuru.SqlJson 3.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -25,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="UkrGuru.SqlJson" Version="2.1.8" />
+    <PackageReference Include="UkrGuru.SqlJson" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
