--- a/src/WebJobs/WebJobs.csproj
+++ b/src/WebJobs/WebJobs.csproj
@@ -13,9 +13,9 @@
     <Description>A starter library for performing background Jobs on your ASP.NET Core website. Supports cron and trigger Rules. Provides extensibility for any custom Action.</Description>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
-    <Version>1.3.0</Version>
-    <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures</PackageTags>
-    <PackageReleaseNotes>Upgrade to UkrGuru.WebJobs.Actions 1.3.0</PackageReleaseNotes>
+    <Version>1.3.1</Version>
+    <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures sendemail</PackageTags>
+    <PackageReleaseNotes>Added SendEmailAction and WJbFiles for large body and attachments</PackageReleaseNotes>
     <AssemblyName>UkrGuru.WebJobs</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs</RootNamespace>
   </PropertyGroup>
@@ -33,9 +33,11 @@
     <None Remove="Resources\1.2.3.sql" />
     <None Remove="Resources\1.2.7.sql" />
     <None Remove="Resources\1.2.8.sql" />
+    <None Remove="Resources\1.3.1.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\1.3.1.sql" />
     <EmbeddedResource Include="Resources\1.2.0.1.Tables.sql" />
     <EmbeddedResource Include="Resources\1.2.0.2.Data.sql" />
     <EmbeddedResource Include="Resources\1.2.0.3.Funcs.sql" />
@@ -48,7 +50,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="UkrGuru.WebJobs.Actions" Version="1.3.0" />
+    <PackageReference Include="UkrGuru.WebJobs.Actions" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
