--- a/src/WebJobs.Actions/WebJobs.Actions.csproj
+++ b/src/WebJobs.Actions/WebJobs.Actions.csproj
@@ -16,8 +16,8 @@
     <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures sendemail template</PackageTags>
     <Description>Part of UkrGuru.WebJobs package extracted for Custom Actions future.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.3.3</Version>
-    <PackageReleaseNotes>Added FillTemplateAction</PackageReleaseNotes>
+    <Version>1.3.5</Version>
+    <PackageReleaseNotes>Fixed bug with WJbFiles_Item parameter</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
