--- a/src/WebJobs/WebJobs.csproj
+++ b/src/WebJobs/WebJobs.csproj
@@ -13,9 +13,9 @@
     <Description>A starter library for performing background Jobs on your ASP.NET Core website. Supports cron and trigger Rules. Provides extensibility for any custom Action.</Description>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
-    <Version>1.3.3</Version>
+    <Version>1.3.5</Version>
     <PackageTags>worker aspnetcore scheduler sqlserver webjobs sql-server-procedures sendemail</PackageTags>
-    <PackageReleaseNotes>Added FillTemplateAction</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed bug with WJbFiles_Item parameter</PackageReleaseNotes>
     <AssemblyName>UkrGuru.WebJobs</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs</RootNamespace>
   </PropertyGroup>
@@ -36,9 +36,11 @@
     <None Remove="Resources\1.3.1.sql" />
     <None Remove="Resources\1.3.2.sql" />
     <None Remove="Resources\1.3.3.sql" />
+    <None Remove="Resources\1.3.4.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\1.3.4.sql" />
     <EmbeddedResource Include="Resources\1.3.3.sql" />
     <EmbeddedResource Include="Resources\1.3.2.sql" />
     <EmbeddedResource Include="Resources\1.3.1.sql" />
@@ -54,7 +56,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="UkrGuru.WebJobs.Actions" Version="1.3.3" />
+    <PackageReference Include="UkrGuru.WebJobs.Actions" Version="1.3.5" />
   </ItemGroup>
 
   <ItemGroup>
