--- a/src/WebJobs.Actions/WebJobs.Actions.csproj
+++ b/src/WebJobs.Actions/WebJobs.Actions.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>UkrGuru.WebJobs.Actions</AssemblyName>
-    <RootNamespace>UkrGuru.WebJobs</RootNamespace>
+    <RootNamespace>UkrGuru.WebJobs.Actions</RootNamespace>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
     <Authors>Oleksandr Viktor (UkrGuru)</Authors>
@@ -15,9 +15,9 @@
     <RepositoryUrl>https://github.com/UkrGuru/WebJobs</RepositoryUrl>
     <PackageTags>netcore sqlserver scheduler worker sendemail template</PackageTags>
     <Description>Part of the UkrGuru.WebJobs package, extracted to create Custom Actions.</Description>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.3.6</Version>
-    <PackageReleaseNotes>Fixed bug with WJbFiles_Item parameter</PackageReleaseNotes>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
+    <PackageReleaseNotes>It's new, not full compatabilty with 1.x ver. Please intall in new db and load Settings, Actions, Rules manually.</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -26,18 +26,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="UkrGuru.SqlJson" Version="3.0.0" />
+    <Compile Remove="Actions\Url2HtmlAction.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\LICENSE.txt">
+    <None Remove="Resources\1.9.9.1.Tables.sql" />
+    <None Remove="Resources\1.9.9.2.Data.sql" />
+    <None Remove="Resources\1.9.9.3.Funcs.sql" />
+    <None Remove="Resources\1.9.9.4.Procs.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="UkrGuru.SqlJson" Version="3.4.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
-    </None>
-    <None Include="..\..\ukrguru-logo.jpg">
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\1.9.9.1.Tables.sql" />
+    <EmbeddedResource Include="Resources\1.9.9.2.Data.sql" />
+    <EmbeddedResource Include="Resources\1.9.9.3.Funcs.sql" />
+    <EmbeddedResource Include="Resources\1.9.9.4.Procs.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\ukrguru-logo.jpg">
       <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+      <PackagePath>\</PackagePath>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
