--- a/demos/WebJobsService/WebJobsService.csproj
+++ b/demos/WebJobsService/WebJobsService.csproj
@@ -7,6 +7,7 @@
     <Copyright>Oleksandr Viktor (UkrGuru)</Copyright>
     <Company>PE VIKTOR Oleksandr Oleksandrovych</Company>
     <Description>Demonstration of using the UkrGuru.WebJobs package under a Windows service</Description>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +20,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
-    <PackageReference Include="UkrGuru.WebJobs" Version="1.3.5" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="2.0.0" />
   </ItemGroup>
 </Project>
