--- a/demos/WebJobsService/appsettings.json
+++ b/demos/WebJobsService/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsService;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=(localdb)\\mssqllocaldb;Database=WebJobsService;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
