--- a/demos/WebJobsDemo/appsettings.json
+++ b/demos/WebJobsDemo/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlJsonConnection": "Server=localhost;Database=WebJobsDemo;Integrated Security=SSPI"
+    "SqlJsonConnection": "Server=(localdb)\\mssqllocaldb;Database=WebJobsDemo2;Integrated Security=SSPI"
   },
 
   "WJbSettings": {
