--- a/src/WebJobs.csproj
+++ b/src/WebJobs.csproj
@@ -11,7 +11,7 @@
     <Description>UkrGuru.WebJobs package is a scheduler and worker for any of your background jobs under any type of .NET 5 applications. Supports cron in the Rules. Provides extensibility for any Custom Actions. Uses UkrGuru.SqlJson for database connection.</Description>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
-    <Version>2.4.1</Version>
+    <Version>2.4.4</Version>
     <PackageTags>netcore sqlserver webjobs scheduler worker sql-server-procedures sendemail template</PackageTags>
     <PackageReleaseNotes>Updated UkrGuru.SqlJson to last version.</PackageReleaseNotes>
     <AssemblyName>UkrGuru.WebJobs</AssemblyName>
@@ -44,6 +44,7 @@
     <None Remove="Resources\1.9.9.3.Funcs.sql" />
     <None Remove="Resources\1.9.9.4.Procs.sql" />
     <None Remove="Resources\2.1.0.sql" />
+    <None Remove="Resources\2.4.3.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +66,7 @@
     <EmbeddedResource Include="Resources\1.9.9.2.Data.sql" />
     <EmbeddedResource Include="Resources\1.9.9.3.Funcs.sql" />
     <EmbeddedResource Include="Resources\1.9.9.4.Procs.sql" />
+    <EmbeddedResource Include="Resources\2.4.3.sql" />
     <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
