--- a/src/WebJobs.csproj
+++ b/src/WebJobs.csproj
@@ -12,8 +12,8 @@
     <PackageIcon>ukrguru-logo.jpg</PackageIcon>
     <RepositoryUrl>https://github.com/UkrGuru/WebJobs</RepositoryUrl>
     <Description>UkrGuru.WebJobs package is a scheduler and worker for any of your background jobs under any type of .NET 5 applications. Supports cron in the Rules. Provides extensibility for any Custom Actions. Uses UkrGuru.SqlJson for database connection.</Description>
-    <Version>3.0.0</Version>
-    <SignAssembly>true</SignAssembly>
+    <Version>3.2.0</Version>
+    <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
     <PackageTags>dotnet net6 sqlserver webjobs scheduler worker sql-server-procedures sendemail template</PackageTags>
     <PackageReleaseNotes>Updated UkrGuru.SqlJson to last version.</PackageReleaseNotes>
@@ -46,7 +46,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
-    <PackageReference Include="UkrGuru.SqlJson" Version="4.0.1" />
+    <PackageReference Include="UkrGuru.SqlJson" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
