--- a/demos/WebJobsDemo/WebJobsDemo.csproj
+++ b/demos/WebJobsDemo/WebJobsDemo.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>12dd54be-cd4e-4f6a-9c0b-459b55357aa2</UserSecretsId>
-    <Version>2.0.0</Version>
+    <Version>3.4.0</Version>
     <Authors>Oleksandr Viktor (UkrGuru)</Authors>
-    <Company>PE VIKTOR Oleksandr Oleksandrovych</Company>
+    <Company>Oleksandr Viktor (UkrGuru)</Company>
     <Copyright>Oleksandr Viktor (UkrGuru)</Copyright>
     <Description>Demonstration of use UkrGuru.WebJobs Package under a ASP.NET Core Website</Description>
   </PropertyGroup>
@@ -19,15 +19,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\2.3.0.sql" />
+    <None Remove="Resources\3.4.0.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\2.3.0.sql" />
+    <EmbeddedResource Include="Resources\3.4.0.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="UkrGuru.WebJobs" Version="3.3.2" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
