--- a/src/WebJobs.csproj
+++ b/src/WebJobs.csproj
@@ -12,11 +12,11 @@
     <PackageIcon>ukrguru-logo.jpg</PackageIcon>
     <RepositoryUrl>https://github.com/UkrGuru/WebJobs</RepositoryUrl>
     <Description>The UkrGuru.WebJobs package is the Scheduler and Workers for any background Job in your .NET application. Supports cron in Rules. Provides extensibility for any custom Action. Uses UkrGuru.SqlJson for database connection. </Description>
-    <Version>3.4.1</Version>
+    <Version>3.4.2</Version>
     <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
     <PackageTags>dotnet net6 sqlserver webjobs scheduler worker sql-server-procedures sendemail template</PackageTags>
-    <PackageReleaseNotes>Updated UkrGuru.SqlJson to last version.</PackageReleaseNotes>
+    <PackageReleaseNotes>DownloadPageAction for download the page and save the result to a WJbFiles table for further processing.</PackageReleaseNotes>
     <AssemblyName>UkrGuru.WebJobs</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs</RootNamespace>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -29,16 +29,19 @@
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Actions\CsvToJsonAction.cs" />
     <Compile Remove="Actions\RunApiHoleAction.cs" />
     <Compile Remove="Actions\SftpGetFilesAction.cs" />
-    <Compile Remove="Actions\Url2HtmlAction.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Resources\2.1.0.sql" />
-    <None Remove="Resources\3.4.1.0.sql" />
+    <None Remove="Resources\3.4.2.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +59,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\3.4.1.0.sql" />
+    <EmbeddedResource Include="Resources\3.4.2.0.sql" />
     <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
