--- a/actions/SshNet/src/SshNet.csproj
+++ b/actions/SshNet/src/SshNet.csproj
@@ -20,6 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\1.0.0.0.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\1.0.0.0.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
     <PackageReference Include="UkrGuru.WebJobs" Version="3.4.6" />
   </ItemGroup>
