--- a/actions/SshNet/src/SshNet.csproj
+++ b/actions/SshNet/src/SshNet.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>UkrGuru.WebJobs.Actions.SshNet</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs.Actions.SshNet</RootNamespace>
+    <Version>3.5.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,16 +21,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\1.0.0.0.sql" />
+    <None Remove="Resources\3.5.0.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\1.0.0.0.sql" />
+    <EmbeddedResource Include="Resources\3.5.0.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
-    <PackageReference Include="UkrGuru.WebJobs" Version="3.4.8" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
