--- a/src/WebJobs.csproj
+++ b/src/WebJobs.csproj
@@ -12,11 +12,11 @@
     <PackageIcon>ukrguru-logo.jpg</PackageIcon>
     <RepositoryUrl>https://github.com/UkrGuru/WebJobs</RepositoryUrl>
     <Description>The UkrGuru.WebJobs package is the Scheduler and Workers for any background Job in your .NET application. Supports cron in Rules. Provides extensibility for any custom Action. Uses UkrGuru.SqlJson for database connection. </Description>
-    <Version>3.4.9</Version>
+    <Version>3.5.0</Version>
     <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>UkrGuru.pfx</AssemblyOriginatorKeyFile>
     <PackageTags>dotnet net6 sqlserver webjobs scheduler worker sql-server email template</PackageTags>
-    <PackageReleaseNotes>Added Safe property to File to prevent cleanup.</PackageReleaseNotes>
+    <PackageReleaseNotes>Optimized WJbFileHelper class .</PackageReleaseNotes>
     <AssemblyName>UkrGuru.WebJobs</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs</RootNamespace>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -42,7 +42,7 @@
 
   <ItemGroup>
     <None Remove="Resources\2.1.0.sql" />
-    <None Remove="Resources\3.4.9.0.sql" />
+    <None Remove="Resources\3.5.0.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -60,7 +60,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\3.4.9.0.sql" />
+    <EmbeddedResource Include="Resources\3.5.0.0.sql" />
     <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
