--- a/demos/CustomActionTester/CustomActionTester.csproj
+++ b/demos/CustomActionTester/CustomActionTester.csproj
@@ -4,11 +4,13 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SendMyEmailAction.cs" />
     <Compile Remove="SsrsExportReportAction.cs" />
+    <Compile Remove="TestAction.cs" />
   </ItemGroup>
 
   <ItemGroup>
